# temps

./: Cargo.toml  README.md  flake.nix
src/: main.rs  table.rs
