[package]
name = "temps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3", features = ["derive", "env"] }
