[package]
name = "temps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
time = { version = "0.3.7", features = [
	"serde",
	"serde-well-known",
	"parsing",
	"formatting",
	"local-offset",
	"macros",
] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
directories = "4.0.1"
